--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "execa": "^6.1.0",
     "jest": "^28.1.3",
     "minimist": "^1.2.6",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
   }
 }
